--- a/Stock_V2/MainWindow.xaml
+++ b/Stock_V2/MainWindow.xaml
@@ -134,8 +134,10 @@
                 <materialDesign:ColorZone Padding="16" materialDesign:ShadowAssist.ShadowDepth="Depth2"
                                             Mode="PrimaryMid" DockPanel.Dock="Top">
                     <DockPanel>
+                        
                         <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}" IsChecked="False"
                                         x:Name="MenuToggleButton"/>
+                        <Label Foreground="White" FontSize="20" FontStyle="Normal" VerticalAlignment="Center"  >LBMS STOCK SYSTEM</Label>
                         <materialDesign:PopupBox DockPanel.Dock="Right" PlacementMode="BottomAndAlignRightEdges" StaysOpen="False">
                             <StackPanel>
                                 <Button Content="Hello World"/>
